fixing spacing on red-recordstory

--- a/blocks/dyncontent/dyncontent.css
+++ b/blocks/dyncontent/dyncontent.css
@@ -1,7 +1,7 @@
 .dyncontent {
     margin: 13% 5% 0 5%;
-    width: 80%;
 }
+
 .dyncontent h2 {
     font-size: 2rem;
     line-height: 2rem;
